Command line options identified by name instead of location

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,5 +1,5 @@
 cmake_minimum_required(VERSION 3.6.0)
-project(validatejwt)
+project(maavalidatejwt)
 
 if (CMAKE_HOST_WIN32)
     set(WINDOWS 1)
@@ -7,10 +7,10 @@ elseif(CMAKE_HOST_UNIX)
     set(LINUX 1)
 endif()
 
-add_executable(validatejwt main.cpp)
+add_executable(maavalidatejwt main.cpp)
 
 if(WINDOWS)
-    set_property(DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR} PROPERTY VS_STARTUP_PROJECT validatejwt)
+    set_property(DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR} PROPERTY VS_STARTUP_PROJECT maavalidatejwt)
 #elseif(LINUX)
 endif()
 
