--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,6 @@
 theme: jekyll-theme-hacker
+
 title: Attestation Sandbox
 description: Just some Azure Attestation related notes and pages.
 show_downloads: false
+google_analytics:
