--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,4 @@
-theme: jekyll-theme-slate
+theme: jekyll-theme-modernist
 
 title: Attestation Sandbox
 description: Just some Azure Attestation related notes and pages.
