--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
 theme: jekyll-theme-modernist
 
-title: Attestation Sandbox
-description: Just some Azure Attestation related notes and pages.
+title: Public Docs & Notes
+description: Just some public visible docs & notes.
 show_downloads: false
 google_analytics:
