--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,4 @@
-theme: jekyll-theme-modernist
+theme: jekyll-theme-midnight
 
 title: Public Docs & Notes
 description: Just some public visible docs & notes.
